# magnet-preview

./: .gitignore  Dockerfile  README.md  plot_test.py  prediction.py  pyproject.toml  requirements.txt  test.py  training.py
config/: config.yaml
config/dataset/: default.yaml  test.yaml  train.yaml
config/model/: multires-unet.yaml  unet-bilinear.yaml  unet.yaml  unetr.yaml  vox2vox.yaml
config/trainer/: default.yaml
scripts/: cst2Efield.py  cst2b1.py  cstsar2mat.py  numpyBfield.py  numpyEfield.py  plot_data.py  preprocess_all.py  ptx3.py
src/magnet/dataset/: datapipes.py  dataset.py
src/magnet/models/: __init__.py  lightning.py  lightningGAN.py  multires_unet.py  phase_mixture_model.py  unet.py  unetr.py  vox2vox.py
src/magnet/plots/: __init__.py  plots.py
src/magnet/postprocessing/: __init__.py  field.py  utils.py
src/magnet/preprocessing/: ascii.py  process_dipoles.py
src/magnet/utils/: divergence_loss.py  divergence_loss_experimental.py  divergence_loss_theoretical.py  faradays_loss.py  random_mesh_generator.py  zero_loss.py
src/varia/: test.py  volume_test.py  voxel.py
